Am now correctly hiding elements/features based on whether the user is loading the site with the Cordova/PhoneGap framework or not. (Important considering the "Add to Contacts" feature of the directory m-app)

--- a/templates/style.scss
+++ b/templates/style.scss
@@ -271,7 +271,7 @@ footer.ui-footer {
 				li {
 					display: block;
 				}
-				li#phonegap, li#cordova {
+				li#phonegap {
 					display: none;
 				}
 			}
